--- a/jobsheet_01.ipynb
+++ b/jobsheet_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8+X8SKM3zQ6yzxP8ppuTe",
+      "authorship_tag": "ABX9TyOVwpa/wOIktKHzVB1igEF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,47 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# Jobsheet 01: Dasar Bahasa Pemrograman Python"
+      ],
       "metadata": {
-        "id": "_F1o2FVuI_JG"
+        "id": "AduSniozNIBK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Number (int, float, complex)\n",
+        "angka_int = 10\n",
+        "print(\"angka_int = \", angka_int, \"->\", type(angka_int))"
+      ],
+      "metadata": {
+        "id": "3jck5g2ANJ2R",
+        "outputId": "0857d766-04f9-4009-90a8-0199889ff728",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "angka_int =  10 -> <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DSNPW49YM1l3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
